firstapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: first-app
  template:
    metadata:
      labels:
        app: first-app
    spec:
      containers:
        - name: first-app
          image: deekshith786/first-app
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name:  first-app-svc
spec:
  type: NodePort
  selector:
    app:  first-app
  ports:
    - name:  first-app-port
      port:  80
      targetPort:  8080
